style(typography): tweak Space Grotesk weights and responsive sizes for legibility

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Burning Brew — From the Earth to the Grind</title>
   <meta name="description" content="Burning Brew — fossil fuel for humans. Dark, industrial coffee for the reckless." />
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <script defer src="js/scripts.js"></script>
 </head>
