feat(home): update hero headline copy

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <section class="hero fossil-hero">
       <div class="hero-inner container">
-        <h1 class="hero-title">They burned. We brewed.</h1>
+        <h1 class="hero-title">You burn through fuel. We brew it.</h1>
         <p class="hero-slogan" id="hero-slogan">Drill Your Day.</p>
         <a class="btn crude-button" href="/products.html">Feed the Machine</a>
       </div>
