fix(nav): use relative links across pages and highlight active route in navbar

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body class="page-root">
   <header class="site-header">
     <div class="nav-inner">
-      <a class="brand" href="/">BURNING BREW</a>
+  <a class="brand" href="index.html">BURNING BREW</a>
       <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation">☰</button>
       <nav class="site-nav" id="site-nav" aria-label="Main navigation">
-        <a href="/products.html">Products</a>
-        <a href="/vision.html">Vision</a>
-        <a href="/contact.html">Contact</a>
+  <a href="products.html">Products</a>
+  <a href="vision.html">Vision</a>
+  <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -28,7 +28,7 @@
       <div class="hero-inner container">
         <h1 class="hero-title">You burn through fuel. We brew it.</h1>
         <p class="hero-slogan" id="hero-slogan">Drill Your Day.</p>
-        <a class="btn crude-button" href="/products.html">Feed the Machine</a>
+  <a class="btn crude-button" href="products.html">Feed the Machine</a>
       </div>
     </section>
 
@@ -44,17 +44,17 @@
         <article class="card">
           <h4>High-Octane Dark</h4>
           <p class="muted">A black that bites. Sourced from the deepest strata.</p>
-          <a class="btn small" href="/products.html#dark">Burn Deeper</a>
+          <a class="btn small" href="products.html#dark">Burn Deeper</a>
         </article>
         <article class="card">
           <h4>Single-Origin Fault Line</h4>
           <p class="muted">Ancestral soils, volcanic pressure, fossil-aged flavor.</p>
-          <a class="btn small" href="/products.html#single-origin">Burn Deeper</a>
+          <a class="btn small" href="products.html#single-origin">Burn Deeper</a>
         </article>
         <article class="card">
           <h4>The Crude Shot</h4>
           <p class="muted">Unfiltered. Unapologetic. Espresso like molten tar.</p>
-          <a class="btn small" href="/products.html#espresso">Burn Deeper</a>
+          <a class="btn small" href="products.html#espresso">Burn Deeper</a>
         </article>
       </div>
     </section>
@@ -62,7 +62,7 @@
     <section class="subscribe container">
       <h3 class="section-title">Join the Fossil Order</h3>
       <p class="muted">Get Fuel Rations delivered on a cadence you choose. Never run on empty.</p>
-      <a class="btn crude-button" href="/products.html#subscribe">Start the Extraction</a>
+  <a class="btn crude-button" href="products.html#subscribe">Start the Extraction</a>
     </section>
   </main>
 
@@ -75,10 +75,10 @@
       </div>
       <div class="col">
         <nav class="footer-nav">
-          <a href="/">Home</a>
-          <a href="/products.html">Products</a>
-          <a href="/vision.html">Vision</a>
-          <a href="/contact.html">Contact</a>
+          <a href="index.html">Home</a>
+          <a href="products.html">Products</a>
+          <a href="vision.html">Vision</a>
+          <a href="contact.html">Contact</a>
         </nav>
       </div>
       <div class="col">
