--- a/products.html
+++ b/products.html
@@ -12,12 +12,12 @@
 <body class="page-products">
   <header class="site-header">
     <div class="nav-inner">
-      <a class="brand" href="/">BURNING BREW</a>
+  <a class="brand" href="index.html">BURNING BREW</a>
       <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation">☰</button>
       <nav class="site-nav" id="site-nav" aria-label="Main navigation">
-        <a href="/products.html">Products</a>
-        <a href="/vision.html">Vision</a>
-        <a href="/contact.html">Contact</a>
+  <a href="products.html">Products</a>
+  <a href="vision.html">Vision</a>
+  <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -91,10 +91,10 @@
       </div>
       <div class="col">
         <nav class="footer-nav">
-          <a href="/">Home</a>
-          <a href="/products.html">Products</a>
-          <a href="/vision.html">Vision</a>
-          <a href="/contact.html">Contact</a>
+          <a href="index.html">Home</a>
+          <a href="products.html">Products</a>
+          <a href="vision.html">Vision</a>
+          <a href="contact.html">Contact</a>
         </nav>
       </div>
       <div class="col">
