--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
 
   <main>
     <section class="hero fossil-hero">
-      <div class="hero-inner container">
-        <h1 class="hero-title">You burn through fuel. We brew it.</h1>
-        <p class="hero-slogan" id="hero-slogan">Drill Your Day.</p>
-  <a class="btn crude-button" href="products.html">Feed the Machine</a>
-      </div>
+        <!-- Hero background video (autoplay, muted, loop). Filename contains spaces so use URL-encoded path. -->
+        <video id="hero-video" class="hero-video" autoplay muted loop playsinline preload="auto" poster="assets/hero-desert.svg">
+          <source src="assets/coffee%20beans%20video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <div class="hero-inner container">
+          <h1 class="hero-title">They burned. We brewed.</h1>
+          <p class="hero-slogan" id="hero-slogan">Drill Your Day.</p>
+          <a class="btn crude-button" href="products.html">Feed the Machine</a>
+        </div>
     </section>
 
     <section class="manifesto fossil-section container">
