about: add manifesto/about page copy
Sections: About Us, Manifesto, Stand For, Roast, In/Out, Sustainability, House Rules, CTA, Footer.

--- a/vision.html
+++ b/vision.html
@@ -23,27 +23,83 @@
   <main>
     <section class="vision-hero fossil-section">
       <div class="container">
-        <h1 class="section-title">Why We Burn.</h1>
-        <p class="lead">We worship pressure. We praise the grind.</p>
+        <h1 class="section-title">WHY WE BURN.</h1>
+        <p class="lead">Coffee that tells the truth, hits hard, and doesn’t apologize for waking you up. We worship pressure. We praise the grind.</p>
+        <p>We’re a small roastery built by people who got tired of coffee that hides behind sugar and slogans. We source transparently, publish roast dates, and share the processes that shape flavor. Our promise is simple: clean production, traceable beans, and a cup that wakes you up without wasting your time.</p>
       </div>
     </section>
 
-    <section class="philosophy container">
+    <section class="vision-section container">
+      <h2 class="section-subtitle">Our Manifesto</h2>
+      <p>Coffee shouldn’t taste like melted candy or a committee meeting. We’re here for the ones who read labels, ask rude questions, and send back weak shots. We roast loud. We brew clean. We say what’s in the bag and what’s not.</p>
+      <p>No unicorn dust. No dessert-in-disguise. No “notes of nostalgia.” Just beans, heat, and standards.</p>
+      <p>We believe a cup can change a day. A habit can change a person. And a little daily rebellion can change a life.</p>
+      <p>If that sounds dramatic, good. Sleep is for later.</p>
       <p class="scripture">The Earth cracked open and gave us this —<br/>Dark. Rich. Defiant.<br/>This is not coffee. This is resurrection.</p>
       <div class="timeline">
-        <ol>
-          <li><strong>Dinosaur</strong> → bones and pressure</li>
-          <li><strong>Fossil</strong> → time condensed</li>
-          <li><strong>Oil</strong> → black energy</li>
-          <li><strong>Caffeine</strong> → human ignition</li>
-          <li><strong>Survival</strong> → the ritual continues</li>
-        </ol>
+        <p><strong>Dinosaur</strong> → bones and pressure</p>
+        <p><strong>Fossil</strong> → time condensed</p>
+        <p><strong>Oil</strong> → black energy</p>
+        <p><strong>Caffeine</strong> → human ignition</p>
+        <p><strong>Survival</strong> → the ritual continues</p>
       </div>
+    </section>
+
+    <section class="vision-section container">
+      <h2 class="section-subtitle">What We Stand For</h2>
+      <ol>
+        <li><strong>Strength over sugar.</strong> Flavor first, sweetener optional.</li>
+        <li><strong>Process over poses.</strong> We publish roast curves, not stock photos of hands holding dirt.</li>
+        <li><strong>Sourcing with a backbone.</strong> We pay fairly and name farms. If we can’t trace it, we don’t sell it.</li>
+        <li><strong>Fresh or forget it.</strong> Roast dates on every bag. If it sits too long, it’s gone.</li>
+        <li><strong>No cult, just coffee.</strong> Join if you want. Leave when you want. We’ll still be here at 6 a.m.</li>
+      </ol>
+    </section>
+
+    <section class="vision-section container">
+      <h2 class="section-subtitle">How We Roast</h2>
+      <ol>
+        <li><strong>Small batches.</strong> Because control matters.</li>
+        <li><strong>Profiled heat.</strong> We tune sweetness without burning the life out of the beans.</li>
+        <li><strong>Water activity checks.</strong> Keeps staling in check and flavor sharp.</li>
+        <li><strong>Grind honesty.</strong> We tell you the right grind for your gear, not the one that sells more gadgets.</li>
+      </ol>
+    </section>
+
+    <section class="vision-section container">
+      <h2 class="section-subtitle">What’s In / What’s Out</h2>
+      <p><strong>In:</strong> Coffee. Water. Heat. Maybe milk if that’s your business.</p>
+      <p><strong>Out:</strong> Syrup disguises, mystery blends, “limited drops” that are just last week’s leftovers.</p>
+    </section>
+
+    <section class="vision-section container">
+      <h2 class="section-subtitle">Sustainability That Doesn’t Suck</h2>
+      <p>Pay the people who grow the beans more than the people who write the slogans. Use recyclable or compostable packaging where it actually works—not where it just photographs well. Ship light, roast local, waste less.</p>
+      <p>We’re not perfect. We post our misses. Then we fix them.</p>
+    </section>
+
+    <section class="vision-section container">
+      <h2 class="section-subtitle">House Rules (The Code)</h2>
+      <ol>
+        <li>Brew with intent.</li>
+        <li>Taste before you trash it.</li>
+        <li>Share your recipe if it slaps.</li>
+        <li>Call us out if we slack. Receipts welcome.</li>
+      </ol>
+    </section>
+
+    <section class="vision-section container">
+      <h2 class="section-subtitle">Join the Grindhouse</h2>
+      <p>No spam. No pity discounts. Early roasts, brew tests, and first dibs when a lot is too good to keep quiet.</p>
       <div class="cta">
-        <a class="btn crude-button" href="/contact.html">Fuel the Rebellion</a>
+        <a class="btn crude-button" href="contact.html">Enter the Grindhouse →</a>
       </div>
     </section>
   </main>
+
+  <div class="pre-footer container">
+    <p class="tagline">Wake up. Do things on purpose.</p>
+  </div>
 
   <footer class="site-footer">
     <div class="caution-stripe"></div>
