added visual elements to page

--- a/vision.html
+++ b/vision.html
@@ -21,10 +21,11 @@
   </header>
 
   <main>
-    <section class="vision-hero fossil-section">
-      <div class="container">
+    <section class="vision-hero">
+      <video class="hero-video hero-video--vision hero-video--a" src="assets/coffee beans roasting.mp4" autoplay muted loop playsinline></video>
+      <div class="container hero-inner">
         <h1 class="section-title">WHY WE BURN.</h1>
-        <p class="lead">Coffee that tells the truth, hits hard, and doesn’t apologize for waking you up. We worship pressure. We praise the grind.</p>
+        <p class="lead">Coffee that tells the truth… We worship pressure. We praise the grind.</p>
         <p>We’re a small roastery built by people who got tired of coffee that hides behind sugar and slogans. We source transparently, publish roast dates, and share the processes that shape flavor. Our promise is simple: clean production, traceable beans, and a cup that wakes you up without wasting your time.</p>
       </div>
     </section>
@@ -35,73 +36,123 @@
       <p>No unicorn dust. No dessert-in-disguise. No “notes of nostalgia.” Just beans, heat, and standards.</p>
       <p>We believe a cup can change a day. A habit can change a person. And a little daily rebellion can change a life.</p>
       <p>If that sounds dramatic, good. Sleep is for later.</p>
-      <p class="scripture">The Earth cracked open and gave us this —<br/>Dark. Rich. Defiant.<br/>This is not coffee. This is resurrection.</p>
-      <div class="timeline">
-        <p><strong>Dinosaur</strong> → bones and pressure</p>
-        <p><strong>Fossil</strong> → time condensed</p>
-        <p><strong>Oil</strong> → black energy</p>
-        <p><strong>Caffeine</strong> → human ignition</p>
-        <p><strong>Survival</strong> → the ritual continues</p>
+    </section>
+
+    <section class="vision-section container">
+      <h2 class="section-subtitle">How We Roast</h2>
+      <div class="process-grid">
+        <article class="process-card">
+          <img class="process-card__image" src="assets/small batches.jpg" alt="">
+          <div class="process-card__inner">
+            <h3>Small batches.</h3>
+            <p>Because control matters.</p>
+          </div>
+        </article>
+        <article class="process-card">
+          <img class="process-card__image" src="assets/pofiled heat.png" alt="">
+          <div class="process-card__inner">
+            <h3>Profiled heat.</h3>
+            <p>We tune sweetness without burning the life out of the beans.</p>
+          </div>
+        </article>
+        <article class="process-card">
+          <img class="process-card__image" src="assets/water.png" alt="">
+          <div class="process-card__inner">
+            <h3>Water activity checks.</h3>
+            <p>Keeps staling in check and flavor sharp.</p>
+          </div>
+        </article>
+        <article class="process-card">
+          <img class="process-card__image" src="assets/grind.png" alt="">
+          <div class="process-card__inner">
+            <h3>Grind honesty.</h3>
+            <p>We tell you the right grind for your gear, not the one that sells more gadgets.</p>
+          </div>
+        </article>
       </div>
     </section>
 
     <section class="vision-section container">
       <h2 class="section-subtitle">What We Stand For</h2>
-      <ol>
-        <li><strong>Strength over sugar.</strong> Flavor first, sweetener optional.</li>
-        <li><strong>Process over poses.</strong> We publish roast curves, not stock photos of hands holding dirt.</li>
-        <li><strong>Sourcing with a backbone.</strong> We pay fairly and name farms. If we can’t trace it, we don’t sell it.</li>
-        <li><strong>Fresh or forget it.</strong> Roast dates on every bag. If it sits too long, it’s gone.</li>
-        <li><strong>No cult, just coffee.</strong> Join if you want. Leave when you want. We’ll still be here at 6 a.m.</li>
-      </ol>
-    </section>
-
-    <section class="vision-section container">
-      <h2 class="section-subtitle">How We Roast</h2>
-      <ol>
-        <li><strong>Small batches.</strong> Because control matters.</li>
-        <li><strong>Profiled heat.</strong> We tune sweetness without burning the life out of the beans.</li>
-        <li><strong>Water activity checks.</strong> Keeps staling in check and flavor sharp.</li>
-        <li><strong>Grind honesty.</strong> We tell you the right grind for your gear, not the one that sells more gadgets.</li>
-      </ol>
+      <div class="principles-grid">
+        <article class="principle-card">
+          <h3>Strength over sugar.</h3>
+          <p>Flavor first, sweetener optional.</p>
+        </article>
+        <article class="principle-card">
+          <h3>Process over poses.</h3>
+          <p>We publish roast curves, not stock photos of hands holding dirt.</p>
+        </article>
+        <article class="principle-card">
+          <h3>Sourcing with a backbone.</h3>
+          <p>We pay fairly and name farms. If we can’t trace it, we don’t sell it.</p>
+        </article>
+        <article class="principle-card">
+          <h3>Fresh or forget it.</h3>
+          <p>Roast dates on every bag. If it sits too long, it’s gone.</p>
+        </article>
+        <article class="principle-card">
+          <h3>No cult, just coffee.</h3>
+          <p>Join if you want. Leave when you want. We’ll still be here at 6 a.m.</p>
+        </article>
+      </div>
     </section>
 
     <section class="vision-section container">
       <h2 class="section-subtitle">What’s In / What’s Out</h2>
-      <p><strong>In:</strong> Coffee. Water. Heat. Maybe milk if that’s your business.</p>
-      <p><strong>Out:</strong> Syrup disguises, mystery blends, “limited drops” that are just last week’s leftovers.</p>
+      <div class="in-out-grid">
+        <article class="in-card">
+          <h3>What’s In</h3>
+          <p>Coffee. Water. Heat. Maybe milk if that’s your business.</p>
+        </article>
+        <article class="out-card">
+          <h3>What’s Out</h3>
+          <p>Syrup disguises, mystery blends, “limited drops” that are just last week’s leftovers.</p>
+        </article>
+      </div>
     </section>
 
-    <section class="vision-section container">
-      <h2 class="section-subtitle">Sustainability That Doesn’t Suck</h2>
-      <p>Pay the people who grow the beans more than the people who write the slogans. Use recyclable or compostable packaging where it actually works—not where it just photographs well. Ship light, roast local, waste less.</p>
-      <p>We’re not perfect. We post our misses. Then we fix them.</p>
+    <section class="vision-section container sustainability-section">
+      <div class="sustainability-grid">
+        <div class="sustainability-copy">
+          <h2 class="section-subtitle">Sustainability That Doesn’t Suck</h2>
+          <p>Pay the people who grow the beans more than the people who write the slogans. Use recyclable or compostable packaging where it actually works—not where it just photographs well. Ship light, roast local, waste less.</p>
+          <p>We’re not perfect. We post our misses. Then we fix them.</p>
+        </div>
+        <div class="sustainability-stats">
+          <article class="stat-card">
+            <h3>Roast Dates</h3>
+            <p>Stamped on every bag.</p>
+          </article>
+          <article class="stat-card">
+            <h3>Traceable Farms</h3>
+            <p>We name every origin.</p>
+          </article>
+          <article class="stat-card">
+            <h3>Low Waste</h3>
+            <p>Cut the landfill, reuse what we can.</p>
+          </article>
+          <article class="stat-card">
+            <h3>Roast Local</h3>
+            <p>Keep the miles and emissions down.</p>
+          </article>
+        </div>
+      </div>
     </section>
 
-    <section class="vision-section container">
-      <h2 class="section-subtitle">House Rules (The Code)</h2>
-      <ol>
-        <li>Brew with intent.</li>
-        <li>Taste before you trash it.</li>
-        <li>Share your recipe if it slaps.</li>
-        <li>Call us out if we slack. Receipts welcome.</li>
-      </ol>
-    </section>
-
-    <section class="vision-section container">
-      <h2 class="section-subtitle">Join the Grindhouse</h2>
-      <p>No spam. No pity discounts. Early roasts, brew tests, and first dibs when a lot is too good to keep quiet.</p>
-      <div class="cta">
-        <a class="btn crude-button" href="contact.html">Enter the Grindhouse →</a>
+    <section class="newsletter-section">
+      <div class="newsletter-inner">
+        <h2 class="section-title">Join the Grindhouse</h2>
+        <p class="muted">No spam. No pity discounts. Early roasts, brew tests, and first dibs when a lot is too good to keep quiet.</p>
+        <form class="newsletter-form" action="#" onsubmit="event.preventDefault(); alert('Subscribed — welcome to the Grindhouse.');">
+          <input type="email" placeholder="Your email" required />
+          <button class="btn crude-button" type="submit">Enter the Grindhouse →</button>
+        </form>
       </div>
     </section>
   </main>
 
-  <div class="pre-footer container">
-    <p class="tagline">Wake up. Do things on purpose.</p>
-  </div>
-
-  <footer class="site-footer">
+<footer class="site-footer">
     <div class="caution-stripe"></div>
     <div class="footer-inner container">
       <div class="col">
@@ -124,6 +175,35 @@
       </div>
     </div>
     <div class="bottom-bar">© 2025 Burning Brew. Powered by Prehistoric Decay.</div>
-  </footer>
+</footer>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const prefersReducedMotion = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    const revealTargets = document.querySelectorAll('.vision-hero .hero-inner, .vision-section, .process-card, .principle-card, .in-card, .out-card, .stat-card, .newsletter-section .newsletter-inner');
+
+    if (prefersReducedMotion) {
+      revealTargets.forEach((el) => {
+        el.classList.add('reveal', 'in');
+      });
+      return;
+    }
+
+    revealTargets.forEach((el) => el.classList.add('reveal'));
+
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('in');
+            observer.unobserve(entry.target);
+          }
+        });
+      },
+      { threshold: 0.15 }
+    );
+
+    revealTargets.forEach((el) => observer.observe(el));
+  });
+</script>
 </body>
 </html>
