--- a/contact.html
+++ b/contact.html
@@ -21,34 +21,39 @@
   </header>
 
   <main>
-    <section class="contact-hero container">
-      <h1 class="section-title">Signal the Outpost</h1>
-      <p class="muted">We respond between dust storms.</p>
+    <section class="contact-hero">
+      <video class="hero-video hero-video--contact hero-video--a" src="assets/grinding grains.mp4" autoplay muted loop playsinline></video>
+      <div class="container hero-inner">
+        <h1 class="section-title">Signal the Outpost</h1>
+        <p class="muted">We respond between dust storms.</p>
+        <a class="btn crude-button" href="#fossil-order">Join the Fossil Order</a>
+      </div>
     </section>
 
     <section class="contact-form container">
       <form action="#" onsubmit="event.preventDefault(); alert('Message sent — we will reply from the pit.');">
-        <label for="alias">Alias</label>
-        <input id="alias" name="name" placeholder="Alias" required />
+        <label for="name">Name</label>
+        <input id="name" name="name" type="text" placeholder="Your name" required />
 
-        <label for="email">Transmission ID</label>
-        <input id="email" type="email" name="email" placeholder="Transmission ID" required />
+        <label for="email">Email</label>
+        <input id="email" type="email" name="email" placeholder="your@email.com" required />
 
-        <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="Speak your heresy." rows="6" required></textarea>
+        <label for="message">Say it like you mean it.</label>
+        <textarea id="message" name="message" placeholder="Drop your message here." rows="7" required></textarea>
 
         <button class="btn crude-button" type="submit">Send the Signal</button>
       </form>
     </section>
 
-    <section class="newsletter container">
-      <h3 class="section-title">Join the Fossil Order</h3>
+    <section class="newsletter container" id="fossil-order">
+      <h2 class="section-title">Join the Fossil Order</h2>
       <p class="muted">Receive dispatches from the Grind Frontier.</p>
-      <form onsubmit="event.preventDefault(); alert('Subscribed — Fossil Order confirmed.');">
-        <input type="email" placeholder="Transmission ID" required />
-        <button class="btn small" type="submit">Subscribe</button>
+      <form class="newsletter-form" onsubmit="event.preventDefault(); alert('Subscribed — Fossil Order confirmed.');">
+        <input type="email" placeholder="Your email" required />
+        <button class="btn crude-button" type="submit">Subscribe</button>
       </form>
     </section>
+
   </main>
 
   <footer class="site-footer">
