--- a/products.html
+++ b/products.html
@@ -90,17 +90,25 @@
         <p class="tagline">From the Earth to the Grind.</p>
       </div>
       <div class="col">
-        <nav class="footer-nav">
-          <a href="index.html">Home</a>
-          <a href="products.html">Products</a>
-          <a href="vision.html">Vision</a>
-          <a href="contact.html">Contact</a>
-        </nav>
+        <div class="contributors">
+          <a class="github-link" href="https://github.com/susanchapas" aria-label="Susan Chapas on GitHub" target="_blank" rel="noopener">
+            <!-- GitHub mark (inline SVG) -->
+            <svg viewBox="0 0 16 16" width="20" height="20" fill="currentColor" aria-hidden="true"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+            <span class="gh-name">Susan Chapas</span>
+          </a>
+          <a class="github-link" href="https://github.com/mcbridgeee" aria-label="Bridget McTiernan on GitHub" target="_blank" rel="noopener">
+            <svg viewBox="0 0 16 16" width="20" height="20" fill="currentColor" aria-hidden="true"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+            <span class="gh-name">Bridget McTiernan</span>
+          </a>
+        </div>
       </div>
       <div class="col">
         <form class="newsletter" action="#" onsubmit="event.preventDefault(); alert('Subscribed — welcome to the Fossil Order.');">
-          <input type="email" placeholder="Transmission ID" aria-label="Email" required />
-          <button class="btn small" type="submit">Join</button>
+          <label for="newsletter-email" class="sr-only">Email</label>
+          <div class="newsletter-row">
+            <input id="newsletter-email" type="email" placeholder="Enter your transmission ID" required />
+            <button class="btn small join-order" type="submit">Join the Order</button>
+          </div>
         </form>
       </div>
     </div>
