style(footer): standardize footer newsletter to 'Your email' and red Subscribe CTA

--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,10 @@
       </div>
       <div class="col">
         <form class="newsletter" action="#" onsubmit="event.preventDefault(); alert('Subscribed — welcome to the Fossil Order.');">
-          <label for="newsletter-email" class="sr-only">Email</label>
+          <label for="newsletter-email" class="sr-only">Your email</label>
           <div class="newsletter-row">
-            <input id="newsletter-email" type="email" placeholder="Enter your transmission ID" required />
-            <button class="btn small join-order" type="submit">Join the Order</button>
+            <input id="newsletter-email" type="email" placeholder="Your email" required />
+            <button class="btn small crude-button join-order" type="submit">Subscribe</button>
           </div>
         </form>
       </div>
