feat(hero): update headline to 'A brew that fuels you forward.' and add static tagline

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
           Your browser does not support the video tag.
         </video>
         <div class="hero-inner container">
-          <h1 class="hero-title">They burned. We brewed.</h1>
+          <h1 class="hero-title">A brew that fuels you forward.</h1>
+          <p class="hero-tagline">Fuel for the Reckless.</p>
           <a class="btn crude-button" href="products.html">Feed the Machine</a>
         </div>
     </section>
