chore(brand): add favicon and bone-colored logo; add logo to header across pages

--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Products — Burning Brew</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/coffee-stains/logo icon.svg">
   <link rel="stylesheet" href="css/styles.css">
   <script defer src="js/scripts.js"></script>
   <meta name="description" content="The Grind — raw, technical coffee offerings from Burning Brew." />
@@ -12,7 +13,10 @@
 <body class="page-products">
   <header class="site-header">
     <div class="nav-inner">
-  <a class="brand" href="index.html">BURNING BREW</a>
+  <a class="brand" href="index.html">
+    <img src="assets/coffee-stains/logo-icon-bone.svg" class="brand-logo" alt="Burning Brew logo" />
+    <span class="brand-text">BURNING BREW</span>
+  </a>
       <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation">☰</button>
       <nav class="site-nav" id="site-nav" aria-label="Main navigation">
   <a href="products.html">Products</a>
