--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
   <meta name="description" content="Burning Brew — fossil fuel for humans. Dark, industrial coffee for the reckless." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/coffee-stains/logo icon.svg">
   <link rel="stylesheet" href="css/styles.css">
   <script defer src="js/scripts.js"></script>
 </head>
 <body class="page-root">
   <header class="site-header">
     <div class="nav-inner">
-  <a class="brand" href="index.html">BURNING BREW</a>
+  <a class="brand" href="index.html">
+    <img src="assets/coffee-stains/logo-icon-bone.svg" class="brand-logo" alt="Burning Brew logo" />
+    <span class="brand-text">BURNING BREW</span>
+  </a>
       <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation">☰</button>
       <nav class="site-nav" id="site-nav" aria-label="Main navigation">
   <a href="products.html">Products</a>
