--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Contact — Burning Brew</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="assets/coffee-stains/logo icon.svg">
+  <link rel="icon" href="assets/svg-trans-logo-icon-01.svg">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="page-contact">
   <header class="site-header">
     <div class="nav-inner">
   <a class="brand" href="index.html">
-    <img src="assets/coffee-stains/logo-icon-bone.svg" class="brand-logo" alt="Burning Brew logo" />
+  <img src="assets/svg-trans-logo-icon-01-bone.svg" class="brand-logo" alt="Burning Brew logo" />
     <span class="brand-text">BURNING BREW</span>
   </a>
       <button id="nav-toggle" class="nav-toggle" aria-label="Open navigation">☰</button>
